--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Hello!</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Ganesh Kadole</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Web Developer & Mobile Application Developer</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Applications Engineer (Teamcenter NX | Cloud )</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
@@ -416,7 +416,7 @@
   <div class="container">
     <div class="my-3">
       <div class="h4">Ganesh Kadole</div>
-      <p>Web Developer & Mobile Application Developer</p>
+      <p>Applications Engineer (Teamcenter NX | Cloud )</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
