--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">                  
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                 </ul>
               </nav>
             </div>            
@@ -356,7 +356,7 @@
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
-              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
          </ul>
         </nav>
       </div>
