--- a/index.html
+++ b/index.html
@@ -80,37 +80,29 @@
             <div class="pb-1">Age:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">28</div>
+            <div class="pb-1 fw-bolder">33</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Email:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">walter@company.com</div>
+            <div class="pb-1 fw-bolder">kadoleg@gmail.com</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Skype:</div>
-          </div>
-          <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">username@skype.com</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Phone:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">+0718-111-0011</div>
+            <div class="pb-1 fw-bolder">+91 9028000143</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Address:</div>
+            <div class="pb-1">Location:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">New Delhi, India</div>
+            <div class="pb-1 fw-bolder">Pune, India</div>
           </div>
           <div class="col-sm-2">
-            <div class="pb-1">Staus:</div>
-          </div>
-          <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">Available</div>
           </div>
         </div>
       </div>
