--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Hello! I’m Ganesh Kadole.</h2>
-        <p>I am passionate about UI/UX design and Web Design. I am a skilled front-end developer and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
+        <p>Certified 'SAFe® 5 Practitioner' and 'Siemens NX' Professional with Bachelor of Technology in Production engineering. Skilled in Product Lifecycle Management, Computer Aided Design (CAD). Working as Applications Engineer having 9+ years of professional experience.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
@@ -89,9 +89,7 @@
             <div class="pb-1 fw-bolder">kadoleg@gmail.com</div>
           </div>
           <div class="col-sm-2">
-          </div>
-          <div class="col-sm-2">
-            <div class="pb-1">Phone:</div>
+            <div class="pb-1">Mobile:</div>
           </div>
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">+91 9028000143</div>
@@ -102,6 +100,7 @@
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">Pune, India</div>
           </div>
+
           <div class="col-sm-2">
           </div>
         </div>
