--- a/index.html
+++ b/index.html
@@ -264,9 +264,10 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">UI/UX Design</h3>
-                <div class="text-muted text-small">Designerr Inc. <small>(2012-2014)</small></div>
-              </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux"/>
+                <h3 class="h5 mb-1">1. Junior Engineer</h3>
+                <div class="text-muted text-medium">1. Konecranes Shared Services India Private Limited</div>
+                <div class="text-muted text-small"><small>(2013-2014)</small></div>
+              </div><img src="images/services/ui-ux.svg" width="40" height="40" alt="ui-ux"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -280,9 +281,10 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">App Development</h3>
-                <div class="text-muted text-small">MakeMyApp LLC. <small>(2015-2018)</small></div>
-              </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development"/>
+                <h3 class="h5 mb-1">2. Design Engineer</h3>
+                <div class="text-muted text-medium">2. Sandvik Asia Private Limited</div>
+                <div class="text-muted text-small"><small>(2014-2016)</small></div>
+              </div><img src="images/services/app-development.svg" width="40" height="40" alt="app development"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -296,9 +298,10 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Web Design</h3>
-                <div class="text-muted text-small">Webbie LLC. <small>(2018-2020)</small></div>
-              </div><img src="images/services/web-design.svg" width="48" height="48" alt="web design"/>
+                <h3 class="h5 mb-1">3. Quality Assurance Analyst (PLM)</h3>
+                <div class="text-muted text-medium">SQS India Infosystems Private Limited</div>
+                <div class="text-muted text-small"><small>(2016-2018)</small></div>
+              </div><img src="images/services/web-design.svg" width="40" height="40" alt="web design"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -312,9 +315,27 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Full Stack Development</h3>
-                <div class="text-muted text-small">Coder Inc. <small>(2020-2021)</small></div>
-              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
+                <h3 class="h5 mb-1">4. Senior Application Engineer</h3>
+                <div class="text-muted text-medium">Prescient Technologies Private Limited</div>
+                <div class="text-muted text-small"><small>(2018-2021)</small></div>
+              </div><img src="images/services/full-stack.svg" width="40" height="40" alt="full stack"/>
+            </div>
+          </div>
+          <div class="card-body px-3 py-2">
+            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card mb-3" data-aos="fade-left" data-aos-delay="400">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
+                <h3 class="h5 mb-1">5. Applications Engineer </h3>
+                <div class="text-muted text-medium">Siemens Industry Software (India) Private Limited</div>
+                <div class="text-muted text-small"><small>(2021-Present)</small></div>
+              </div><img src="images/services/full-stack.svg" width="40" height="40" alt="full stack"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
