Updated Experience Titles

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h3 class="h5 mb-1">1. Junior Engineer</h3>
-                <div class="text-muted text-medium">1. Konecranes Shared Services India Private Limited</div>
+                <div class="text-muted text-medium">Konecranes Shared Services India Private Limited</div>
                 <div class="text-muted text-small"><small>(2013-2014)</small></div>
               </div><img src="images/services/ui-ux.svg" width="40" height="40" alt="ui-ux"/>
             </div>
@@ -282,7 +282,7 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h3 class="h5 mb-1">2. Design Engineer</h3>
-                <div class="text-muted text-medium">2. Sandvik Asia Private Limited</div>
+                <div class="text-muted text-medium">Sandvik Asia Private Limited</div>
                 <div class="text-muted text-small"><small>(2014-2016)</small></div>
               </div><img src="images/services/app-development.svg" width="40" height="40" alt="app development"/>
             </div>
