Updated Experience Description

--- a/index.html
+++ b/index.html
@@ -205,8 +205,12 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <ul>
+              <li>Responsible for maintaining standard component library in Teamcenter with parametric modeling (Part Family Approach) and assemblies </li>
+              <li>Giving support to other design department and designers situated worldwide for 3D Modeling, Assembly and Drafting using Teamcenter 9 and NX 8.5 integration</li>
+              <li>Creating items in Teamcenter with structures (Bill of materials)</li>
+              <li>Item cleansing and creation work for some BU’s (Like port crane, straddle carrier) with their legacy data</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -222,8 +226,14 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <ul>
+              <li>Design and development of cutting tool inserts having standard and special types as per customer requirement</li>
+              <li>Design of press tools required to manufacture cutting tool inserts using NX (6/8.5)-Teamcenter (8/10)</li>
+              <li>Design of entirely new special inserts as per customer requirement </li>
+              <li>Creation of 3D NX models and intermediate manufacturing drawings required in routine manufacturing process</li>
+              <li>Support to Computer aided process planning</li>
+              <li>Project- Redesign of press tools and its related drawings from old cad system using Teamcenter NX integration</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -239,8 +249,13 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <ul>
+              <li>Manual functional testing on DEV, SIT and QA environments for different releases.</li>           
+              <li>Teamcenter 11.2 and Active Workspace 3.2 - Change Management</li>
+              <li>Customized NX 10 utilities/tools (Modeling /Drafting/Assembly/PMI/Sheet Metal/Manufacturing) as per functional requirements</li>
+              <li>Creating and managing the test scripts as per functional requirements using HP ALM 11 </li>
+              <li>Defect management using HP ALM 11 </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -256,8 +271,13 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Deputed at Siemens Industry Software (India) Private Limited (SISW), Pune</p>
+            <p>Worked as Lead Application Engineer on various NX Assemblies projects (Continues Release) .</p>
+            <ul>
+              <li>Testing of NX Assembly and TCIN (Teamcenter NX Integration) modules </li>
+              <li>Test plan writing based on design, functional requirements in Polarion. Experience using JIRA</li>
+              <li>Automation test case development</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -273,8 +293,12 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Working as Lead Application Engineer on cloud projects</p>
+            <ul>
+              <li>Testing of Siemens Connector and NX cloud integration </li>
+              <li>Test plan writing based on design, functional requirements in JIRA </li>
+              <li>Support for other cloud projects (Xcelerator Share, Mold Connect, TC X, NX X etc.) </li>
+            </ul>
           </div>
         </div>
       </div>
