--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ganesh Kadole</title>
+     
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -54,11 +55,11 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Hello!</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Ganesh Kadole</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Applications Engineer (Teamcenter NX | Cloud )</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Applications Engineer (Teamcenter NX | Cloud ) at Siemens</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">                  
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                 </ul>
               </nav>
             </div>            
@@ -380,7 +381,7 @@
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
-              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
          </ul>
         </nav>
       </div>
