--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">                  
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-3x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a></li>
                 </ul>
               </nav>
             </div>            
@@ -377,11 +378,12 @@
   <div class="container">
     <div class="my-3">
       <div class="h4">Ganesh Kadole</div>
-      <p>Applications Engineer (Teamcenter NX | Cloud )</p>
+      <p>Applications Engineer (Teamcenter NX | Cloud ) at Siemens</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
-              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-2x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a></li>
          </ul>
         </nav>
       </div>
