Icon Changes Added Certifications Section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <ul class="nav justify-content-left">                  
                   <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/groups/ugnxusers" target="_blank title="Facebook"><i class="fab fa-facebook-square fa-3x" style='color:#4267b2'></i><span class="menu-title sr-only">Facebook</span></a></li>
+                
                 </ul>
               </nav>
             </div>            
@@ -187,6 +188,14 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="section px-3 px-lg-4 pt-5" id="certifications">
+  <div class="container-narrow">
+    <div class="text-center mb-5">
+      <h2 class="marker marker-center">Certifications</h2>
+    </div>
+    
   </div>
 </div>
 <div class="section px-3 px-lg-4 pt-5" id="experience">
