Added Certification Links and Images

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
         <div class="col-md-5 offset-md-2">
           <div class="py-1">
             <li><a href="images/Certificates/Getting_Started_with_Git_and_GitHub.png" target="_blank">Getting Started with Git and GitHub</a></li>
-            <li><a href="images/Certificates/Learning_C#.png" target="_blank">Learning C#</a></li>
-            <li><a href="images/Certificates/C#_File_System_Tips_and_Tricks.png" target="_blank">C# File System Tips and Tricks</a></li>
-            <li><a href="images/Certificates/Selenium_and_C#.png" target="_blank">Learning Selenium</a></li>
+            <li><a href="images/Certificates/Selenium_CSharp.png" target="_blank">Learning C#</a></li>
+            <li><a href="images/Certificates/CSharp_File_System_Tips_and_Tricks.png" target="_blank">C# File System Tips and Tricks</a></li>
+            <li><a href="images/Certificates/Selenium_CSharp.png" target="_blank">Learning Selenium</a></li>
             <li><a href="images/Certificates/Programming_Foundations_Fundamentals.png" target="_blank">Programming Foundations: Fundamentals</a></li>
            
           </ul> 
