--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="container-narrow">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="h4 my-2">Hello! I’m Ganesh Kadole.</h2>
+        <h2 class="h4 my-2">About me</h2>
         <p>Certified 'SAFe® 5 Practitioner' and 'Siemens NX' Professional with Bachelor of Technology in Production engineering. Skilled in Product Lifecycle Management, Computer Aided Design (CAD). Working as Applications Engineer having 9+ years of professional experience.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
