--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           </div>
           <div class="col-sm-10">
             <div class="pb-1 fw-bolder">+91 9028000143</div>
+            <div class="pb-1 fw-bolder">+91 9970604030</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Location:</div>
