Updated Skills Section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Siemens NX</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">NX CAD</span><span>90%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
