--- a/index.html
+++ b/index.html
@@ -133,33 +133,38 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Teamcenter and Active Workspace</span><span>70%</span></div>
+            <div class="text-muted text-small"><small>(Structure Manager, Change Management, Workflow Viewer, Organization, Teamcenter Visualization etc.)</small></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">NX CAD</span><span>90%</span></div>
+            <div class="text-muted text-small"><small>(Sketcher, Modeling, Assemblies, Drafting, PMI, Sheet Metal)</small></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">NX Open</span><span>60%</span></div>
+            <div class="text-muted text-small"><small>(Visual Basic, C#, Block UI Styler and Windows Forms)</small></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+            </div>            
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Teamcenter</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">NX CAM/CAE</span><span>50%</span></div>
+            <div class="text-muted text-small"><small>(Exposure)</small></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>            
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Active Workspace</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">CAD (Solid Edge/Solidworks/Creo)</span><span>50%</span></div>
+            <div class="text-muted text-small"><small>(Exposure)</small></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-          <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">CAD (Solid Edge/Solidworks/Creo)</span><span>60%</span></div>
-            <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>          
         </div>
@@ -170,9 +175,9 @@
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Polarion/JIRA</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Polarion/JIRA</span><span>80%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
