Added Certificates Gallery

--- a/index.html
+++ b/index.html
@@ -243,14 +243,65 @@
             <li><a href="images/Certificates/CSharp_File_System_Tips_and_Tricks.png" target="_blank">C# File System Tips and Tricks</a></li>
             <li><a href="images/Certificates/Selenium_CSharp.png" target="_blank">Learning Selenium</a></li>
             <li><a href="images/Certificates/Programming_Foundations_Fundamentals.png" target="_blank">Programming Foundations: Fundamentals</a></li>
-           
-          </ul> 
+            </ul> 
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="grid bp-gallery pb-3" data-aos="zoom-in-up" data-aos-delay="100">
+          <div class="grid-sizer"></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/SAFe_5_Practitioner.png" data-bp="images/Certificates/SAFe_5_Practitioner.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">SAFe® 5</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/NX_CAD_Design_Associate.png" data-bp="images/Certificates/NX_CAD_Design_Associate.png" data-caption="Example of an optional caption."/>
+                <figcaption> 
+                  <h4 class="h5 mb-0">NX CAD Design Associate</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/NX_Essentials_for_NX_Designers.png" data-bp="images/Certificates/NX_Essentials_for_NX_Designers.png" data-caption="Example of an optional caption."/>
+                <figcaption> 
+                  <h4 class="h5 mb-0">Essentials for NX Designers</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/Solid_Edge_ST10_Associate_I.png" data-bp="images/Certificates/Solid_Edge_ST10_Associate_I.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">Solid Edge Associate I</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/ISTQB_CTFL.png" data-bp="images/Certificates/ISTQB_CTFL.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">ISTQB-CTFL</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/Getting_Started_with_Git_and_GitHub.png" data-bp="images/Certificates/Getting_Started_with_Git_and_GitHub.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">Git and GitHub</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/Learning_CSharp.png" data-bp="images/Certificates/Learning_CSharp.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">C#</h4>
+                </figcaption>
+              </figure></a></div>
+          <div class="grid-item"><a href="">
+              <figure class="portfolio-item"><img src="images/Certificates/Selenium_CSharp.png" data-bp="images/Certificates/Selenium_CSharp.png"/>
+                <figcaption>
+                  <h4 class="h5 mb-0">Selenium</h4>
+                </figcaption>
+              </figure></a></div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+    
 <div class="section px-3 px-lg-4 pt-5" id="experience">
   <div class="container-narrow">
     <div class="text-center mb-5">
