Added Section - Community of Practice

--- a/index.html
+++ b/index.html
@@ -423,6 +423,14 @@
 <div class="section px-2 px-lg-4 pt-5" id="portfolio">
   <div class="container">
     <div class="text-center mb-5">
+      <h2 class="marker marker-center">Coomunity of Practice </h2>
+    </div>
+    <h5 style="text-align:center;">A community of practice is a group of people who "share a concern or a passion for something they do and learn how to do it better as they interact regularly."</h5>
+  </div>
+</div>
+<div class="section px-2 px-lg-4 pt-5" id="portfolio">
+  <div class="container">
+    <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio </h2>
     </div>
       <h3 style="text-align:center;">(In Progress)</h3>
