--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
             <div class="pb-1">Mobile:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">+91 9028000143</div>
-            <div class="pb-1 fw-bolder">+91 9970604030</div>
-          </div>
+            <div class="pb-1 fw-bolder">+91 9028000143 / 9970604030</div>
+            </div>
           <div class="col-sm-2">
             <div class="pb-1">Location:</div>
           </div>
