--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
       <h2 class="marker marker-center">Coomunity of Practice </h2>
     </div>
     <h5 style="text-align:center;">A community of practice is a group of people who "share a concern or a passion for something they do and learn how to do it better as they interact regularly."</h5>
+    <br>
   </div>
   <div class="row">
     <div class="col-md-6">
@@ -463,7 +464,7 @@
         </div>
         <div class="card-body px-3 py-2">
           <ul>
-            <li>Became Owner in 2017 (Handed over by Amy Reyes - Former Siemens Marketing and Community manager</li>
+            <li>Became Owner in 2017 (Handed over by Amy Reyes - Former Siemens Marketing and Community manager)</li>
             <li>11000+ members</li>
             <li>Experts from Siemens and aroud the world to help</li>
             <div class="text-center">
