--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 <div class="section px-2 px-lg-4 pt-5" id="portfolio">
   <div class="container">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Coomunity of Practice </h2>
+      <h2 class="marker marker-center">Community of Practice </h2>
     </div>
     <h5 style="text-align:center;">A community of practice is a group of people who "share a concern or a passion for something they do and learn how to do it better as they interact regularly."</h5>
     <br>
@@ -562,7 +562,7 @@
           <ul>
             <li>Became Owner in 2017 (Handed over by Amy Reyes - Former Siemens Marketing and Community manager)</li>
             <li>11000+ members</li>
-            <li>Experts from Siemens and aroud the world to help</li>
+            <li>Experts from Siemens and around the world to help</li>
             <div class="text-center">
               <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/2962050/" target="_blank">Join Group </a></div>
             </div>
