--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">About me</h2>
-        <p>Certified 'SAFe® 5 Practitioner' and 'Siemens NX' Professional with Bachelor of Technology in Production engineering. Skilled in Product Lifecycle Management, Computer Aided Design (CAD). Working as Applications Engineer having 9+ years of professional experience.</p>
+        <p>Certified Siemens Teamcenter and NX professional with a Bachelor of Technology in Production engineering. Skilled in Product Lifecycle Management, Computer-Aided Design (CAD). Working as an Applications Engineer with a total of 9.5 + years of experience in the information technology and manufacturing domain.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
