--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/NX Design Associate.png">   
+            <img src="images/Badges/NX Design Associate.png" class="img-fluid>   
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">NX Design Associate</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
@@ -211,7 +211,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/AWS Certified Cloud Practitioner.png">
+            <img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid>
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">AWS Cloud Practitioner</figcaption></b>
             <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
           </div>                      
@@ -219,7 +219,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Certified SAFe 5 Practitioner.png">
+            <img src="images/Badges/Certified SAFe 5 Practitioner.png" class="img-fluid>
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">SAFe 5 Practitioner</figcaption></b>
             <!-- <b style="text-align:center">SAFe 5 Practitioner</b>   -->
           </div>                      
@@ -227,7 +227,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Mendix Rapid Developer.png">
+            <img src="images/Badges/Mendix Rapid Developer.png" class="img-fluid>
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Mendix Rapid Developer</figcaption></b>      
             <!-- <b style="text-align:center">Mendix Rapid Developer</b>   -->
           </div>                      
@@ -343,11 +343,14 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Working as Lead Application Engineer on cloud projects</p>
+            <p>Working as Lead Application Engineer on cloud (SaaS/Hybrid SaaS) projects</p>
             <ul>
-              <li>Testing of Siemens Connector and NX cloud integration </li>
-              <li>Test plan writing based on design, functional requirements in JIRA </li>
-              <li>Support for other cloud projects (Xcelerator Share, Mold Connect, TC X, NX X etc.) </li>
+              <li>Functional testing, Integration testing, and Regression testing of Xcelerator Share (Web client), Siemens Connector, NX (Desktop clients), and other integrated applications</li>
+              <li>API testing using Postman</li>
+              <li>Responsible for Smoke testing, Sanity testing, Final product validation (FPV), and participation in UAT testing for different cloud applications</li>
+              <li>Test plan writing based on design and functional requirements using Polarion</li>
+              <li>Bug/Defect reporting and tracking using JIRA and Polarion</li>
+              <li>Coordination and support to cross-functional teams for other cloud projects (Xcelerator Share, Mold Connect, TC X, NX X, etc.)</li>
             </ul>
           </div>
         </div>
