--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/NX Design Associate.png" class="img-fluid>   
+            <img src="images/Badges/NX Design Associate.png" class="img-fluid">   
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">NX Design Associate</figcaption></b>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
@@ -211,7 +211,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid>
+            <img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid">
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">AWS Cloud Practitioner</figcaption></b>
             <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
           </div>                      
@@ -219,7 +219,7 @@
 
         <div class="col">
           <div class="py-1">
-            <img src="images/Badges/Certified SAFe 5 Practitioner.png" class="img-fluid>
+            <img src="images/Badges/Certified SAFe 5 Practitioner.png" class="img-fluid">
             <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">SAFe 5 Practitioner</figcaption></b>
             <!-- <b style="text-align:center">SAFe 5 Practitioner</b>   -->
           </div>                      
