--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">NX Open</span></div>
             <div class="text-muted text-small"><small>(Visual Basic, C#, Block UI Styler and Windows Forms)</small></div>
-          -->
+
           </div>
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">NX CAM/CAE</span></div>
             <div class="text-muted text-small"><small>(Exposure)</small></div>
-           -->
+ 
           </div>
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">CAD (Solid Edge/Solidworks/Creo)</span></div>
@@ -167,7 +167,7 @@
           </div>
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">Visual Basic</span></div>
-
+<!-- 
           </div>
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">Visual Studio</span></div>
@@ -176,7 +176,7 @@
           <div class="py-1">
             <div class="d-flex text-medium fw-bolder"><span class="me-auto">Git/Github</span></div>
 
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
