--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+              <li class="nav-item"><a class="nav-link" href="#certifications">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                             
@@ -183,7 +184,7 @@
   </div>
 </div>
 
-<div class="section px-3 px-lg-4 pt-5" id="skills">
+<div class="section px-3 px-lg-4 pt-5" id="certifications">
   <div class="container-narrow">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Certifications</h2>
