--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> 
-              <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio Pege</a></li>                            
+              <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio Pege</a></li>                            
             </ul>
           </div>
         </div>
