--- a/index.html
+++ b/index.html
@@ -503,9 +503,40 @@
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio </h2>
     </div>
-      <h3 style="text-align:center;">(In Progress)</h3>
+      <!-- <h3 style="text-align:center;">(In Progress)</h3> -->
   </div>
+
+  <div class="container-narrow">
+    <div class="bg-light p-3">
+      <div class="row">
+        <div class="col">
+          <div class="py-1">
+            <img src="images/Badges/Teamcenter X Associate.png" class="img-fluid" >
+            <b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;">Teamcenter</figcaption></b>
+            <!-- <b style="text-align:center">Teamcenter X Associate</b> -->
+          </div>                      
+        </div>
+
+        <div class="col">
+          <div class="py-1">
+            <a href="portfolio.html"><img src="images/Badges/NX Design Associate.png" class="img-fluid">   
+            <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Active Workspace</figcaption></b>
+            <!-- <b style="text-align:center">NX Design Associate</b>      -->
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="py-1">
+            <img src="images/Badges/AWS Certified Cloud Practitioner.png" class="img-fluid">
+            <b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">NX Open</figcaption></b>
+            <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
+          </div>                      
+        </div>
+      </div>
+    </div>
+  </div>  
 </div>
+<br>
 
 <footer class="pt-4 pb-4 text-center bg-light">
   <div class="container">
