--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
   
         <div class="col">
           <div class="py-1">
-            <a href="portfolio.html" target="_blank"><img src="images/NXOpen.png" class="img-fluid"></a>   
-            <a href="portfolio.html" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX  Portfolio</figcaption></b></a> 
+            <a href="portfolio.html#nxopen" target="_blank"><img src="images/NXOpen.png" class="img-fluid"></a>   
+            <a href="portfolio.html#nxopen" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:larger;">NX  Portfolio</figcaption></b></a> 
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
