--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               
   <div class="wave-bg"></div>
 </header>
-<div class="section pt-4 px-3 px-lg-4" id="about">
+<div class="section px-3 px-lg-4" id="about">
   <div class="container-narrow">
     <div class="row">
       <div class="col-md-6">
