--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,11 @@
     </header>
     <div class="page-content">
       <div id="content">
-<header>  
-              
+<header>                
   <div class="wave-bg"></div>
 </header>
 
-<div class="section px-3 px-lg-4 pt-5" id="teamcenter">
+<div class="section px-3 px-lg-4" id="teamcenter">
   <div class="container-narrow">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Teamcenter</h2>
