--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   <div class="container">
     <div class="my-3">
       <div class="h4">Ganesh Kadole</div>
-      <p>Applications Engineer (Teamcenter NX | Cloud ) at Siemens</p>
+      <p>Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
