--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
 <div class="section px-3 px-lg-4 pt-5" id="activeworkspace">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Active Workspace</h2>
+      <h2 class="marker marker-center">Active Workspace (Teamcenter X)</h2>
     </div>
 
     <div class="bg-light p-3">
