--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           <div class="py-1">
             <!-- <div class="d-flex text-medium fw-bolder"><span class="me-auto">Teamcenter/Teamcenter X/Active Workspace</span></div> -->
-            <b><li style="font-size: large;">Teamcenter X/Active Workspace</li></b>
+            <b><li style="font-size: large;">Active Workspace/Teamcenter X</li></b>
             <!-- <div class="text-muted text-medium"><small>(Structure Manager, Change Management, Workflow Viewer, Organization, Teamcenter Visualization etc.)</small></div> -->
 
           </div>
