--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="col-md-5 offset-md-2">
 
           <div class="py-1">
-                        <b><li style="font-size: large;">Cloud</li></b>
+                        <b><li style="font-size: large;">Cloud (AWS)</li></b>
           </div> 
     
           <div class="py-1">
