--- a/index.html
+++ b/index.html
@@ -253,25 +253,25 @@
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col" style="text-align: center;">
           <div class="py-1">
-            <a href="https://www.credly.com/badges/45607a8d-7e52-4331-9d9b-cd4d1afe9502" target="_blank"><img src="images/Badges/Siemens Customer Success Associate.png" width="200px" class="img-fluid"></a>
+            <a href="https://www.credly.com/badges/45607a8d-7e52-4331-9d9b-cd4d1afe9502" target="_blank"><img src="images/Badges/Siemens Customer Success Associate.png" width="175px" class="img-fluid"></a>
             <a href="https://www.credly.com/badges/45607a8d-7e52-4331-9d9b-cd4d1afe9502" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black; font-size:medium;">Customer Success Associate</figcaption></b></a>
             <!-- <b style="text-align:center">Teamcenter X Associate</b> -->
           </div>                      
         </div>
 
-        <div class="col">
+        <div class="col" style="text-align: center;"">
           <div class="py-1">
-            <a href="https://www.credly.com/badges/bf96c9b4-8b6a-4d40-bedc-991e1231f978" target="_blank"><img src="images/Badges/Siemens Technical Support Associate.png" width="200px" class="img-fluid"></a> 
+            <a href="https://www.credly.com/badges/bf96c9b4-8b6a-4d40-bedc-991e1231f978" target="_blank"><img src="images/Badges/Siemens Technical Support Associate.png" width="175px" class="img-fluid"></a> 
             <a href="https://www.credly.com/badges/bf96c9b4-8b6a-4d40-bedc-991e1231f978" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Technical Support Associate</figcaption></b></a>
             <!-- <b style="text-align:center">NX Design Associate</b>      -->
           </div>
         </div>
 
-        <div class="col">
+        <div class="col" style="text-align: center;">
           <div class="py-1">
-            <a href="https://www.credly.com/badges/b7af784f-4d03-4261-b63d-9979a9f6870a" target="_blank"><img src="images/Badges/Siemens Presales Associate Certificate.png" width="200px" class="img-fluid"></a>
+            <a href="https://www.credly.com/badges/b7af784f-4d03-4261-b63d-9979a9f6870a" target="_blank"><img src="images/Badges/Siemens Presales Associate Certificate.png" width="175px" class="img-fluid"></a>
             <a href="https://www.credly.com/badges/b7af784f-4d03-4261-b63d-9979a9f6870a" target="_blank"><b><figcaption class="figure-caption text-center" style="color: black;font-size:medium;">Presales Associate</figcaption></b></a>
             <!-- <b style="text-align:center">AWS Cloud Practitioner</b>   -->
           </div>                      
