--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="portfolio.html#activeworkspace" target="_blank">Active Workspace <i class="fas fa-arrow-right"></i></a></div>
         </div> 
         <div class="col">
-          <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="portfolio.html#nxopen" target="_blank">NX Open <i class="fas fa-arrow-right"></i></a></div>
+          <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="portfolio.html#nxopen" target="_blank">NX Customization <i class="fas fa-arrow-right"></i></a></div>
         </div>
       </div>     
 
