--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,7 @@
 <div class="section px-3 px-lg-4 pt-5" id="nxopen">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">NX Open</h2>
+      <h2 class="marker marker-center">NX Customization</h2>
     </div>
 
     <div class="bg-light p-3">
