--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
 
           <div class="py-1">
             <!-- <div class="d-flex text-medium fw-bolder"><span class="me-auto">Polarion/JIRA</span></div> -->
-            <b><li style="font-size: large;">Polarion, JIRA</li></b>
+            <b><li style="font-size: large;">Polarion, JIRA, HP ALM</li></b>
  
           </div>
 
           <div class="py-1">
             <!-- <div class="d-flex text-medium fw-bolder"><span class="me-auto">Visual Basic, HTML and CSS</span></div> -->
-            <b><li style="font-size: large;">Visual Basic, HTML and CSSe</li></b>
+            <b><li style="font-size: large;">Visual Basic, HTML and CSS</li></b>
             </div>
 <!-- 
           </div>
