--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Siemens PLM TeamCenter</h3>
+                <h3 class="h5 mb-1">Siemens PLM TeamCenter</h3>          
                 <div class="text-muted text-medium">Manager</div>
               </div><a class="nav-link" href="https://www.linkedin.com/groups/2489365/" target="_blank title="Facebook"><i class="fab fa-linkedin fa-3x" style='color:#0072b1'></i><span class="menu-title sr-only">Facebook</span></a>
             </div>
@@ -305,9 +305,9 @@
             <ul>              
               <li>12000+ members</li>             
               
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/2489365/" target="_blank">Join Group </a></div>
-              </div> -->
+              </div>
               </ul>
           </div>
         </div>
@@ -326,9 +326,9 @@
           <div class="card-body px-3 py-2">
             <ul>
               <li>11800+ members</li> 
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/2962050/" target="_blank">Join Group </a></div>
-              </div> -->
+              </div>
             </ul>
           </div>
         </div>
@@ -347,9 +347,9 @@
             <ul>              
               <li>13100+ members</li>             
               
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.facebook.com/groups/ugnxusers" target="_blank">Join Group </a></div>
-              </div> -->
+              </div>
               </ul>
           </div>
         </div>
@@ -370,9 +370,9 @@
           <div class="card-body px-3 py-2">
             <ul>
               <li>29500+ members</li> 
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/869117/" target="_blank">Join Group </a></div>
-              </div> -->
+              </div>
             </ul>
           </div>
         </div>
@@ -390,9 +390,9 @@
           <div class="card-body px-3 py-2">
             <ul>      
               <li>100+ members</li>
-              <!-- <div class="text-center">
+              <div class="text-center">
                 <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="https://www.linkedin.com/groups/12563746/" target="_blank">Join Group </a></div>
-              </div> -->
+              </div>
               </ul>
           </div>
         </div>
