--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ganesh Kadole</title>
+    <title>Ganesh Kadole Portfolio</title>
     <link rel="icon" type="image/png" href="GitHub_Page_Favicon.png" />     
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap"/>
@@ -35,11 +35,8 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-              <!-- <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li> -->
-              <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
-              <!-- <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li> -->
-              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>  -->
-              <li class="nav-item"><a class="nav-link" href="#portfolio" target="_blank">Portfolio</a></li>                            
+              <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li> 
+              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>                            
             </ul>
           </div>
         </div>
